--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node dist/index.js",
     "test": "jest"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "Usman-Ubaid",
   "license": "ISC",
